Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-111045

QSoundEffect not playing

XMLWordPrintable

    • Android, Linux/X11, Windows
    • eec1e986c (dev), fe7195b72 (6.6), 9f107d651 (tqtc/lts-6.5), 9262a8abd (dev), 6ec73a0b6 (dev), aed05293f (6.7), 80abf2be0 (6.7), ad9f7dd51 (6.6), 64a69ef58 (6.6), 1bdc86989 (tqtc/lts-6.5), a85e089b6 (tqtc/lts-6.5)
    • 2023wk34FOQtforAndroid, 2023wk40FOQtforAndroid, 2023wk42FOQtforAndroid, 2023wk44FOQtforAndroid, G&UI Finishing 2023

      When playing a QSoundEffect there is no audio.

      According to the QSoundEffect's status the sound effect is being played, however it does not seem to activate the device's audio output device. Using something like QApplication::beep to activate the audio output causes the sound effect to be heard for a short time.

      See the attached sample project, the click button plays the sound effect while the beep button calls QApplication::beep.

        For Gerrit Dashboard: QTBUG-111045
        # Subject Branch Project Status CR V

            mikko.hallamaa Mikko Hallamaa
            kevin.zhang Kevin Zhang
            Votes:
            4 Vote for this issue
            Watchers:
            10 Start watching this issue

              Created:
              Updated:
              Resolved: