Android: Fix short sounds playing

Android uses OpenSL ES to play sounds. Firstly buffer is filled up with
the initial data, then player state is changed to SL_PLAYSTATE_PLAYING.
In playing state, player requests more data (using callback). When there
is no more data we are responsible to set SL_PLAYSTATE_STOPPED on the
player.

In seems that change between SL_PLAYSTATE_PLAYING and
SL_PLAYSTATE_STOPPED states is too quick. The result in cutting off end
of the sound (for short sounds there is no sound at all).

Therefore, when data is over we pass empty data buffer to OpenSL ES
engine to make sure that player was not stopped too fast.

Task-number: QTBUG-111045
Change-Id: Iac23639d3d85a279f503a4b26637d46ea16c9864
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>
(cherry picked from commit eec1e986ce6110547975f358adc0a941b53370d5)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit fe7195b72b462ab99ed65b307f88695dba09fb2a)